[package]
name = "alkio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.21.0"
slab_tree = "0.3.2"
toml = "0.8.0"
serde = { version = "1", features = ["derive"]}
rhai = "1.16.0"
rand = "0.8.4"

[build-dependencies]
copy_to_output = "2.1.0"
